2011-11-14  Julien Chaffraix  <jchaffraix@webkit.org>

        Add --css-grid-layout to build-webkit and the build systems
        https://bugs.webkit.org/show_bug.cgi?id=72320

        Reviewed by Ojan Vafai.

        * Configurations/FeatureDefines.xcconfig:

2011-11-14  Geoffrey Garen  <ggaren@apple.com>

        A little bit of arguments / activation cleanup
        https://bugs.webkit.org/show_bug.cgi?id=72339

        Reviewed by Gavin Barraclough.
        
        Renamed copyRegisters => tearOff to match bytecode and other terminology.
        
        Renamed setActivation => didTearOffActivation to indicate that this is a
        notification the object may choose to ignore. Moved "Should I ignore?"
        code into the arguments object to avoid duplication elsewhere.

        * interpreter/Interpreter.cpp:
        (JSC::Interpreter::unwindCallFrame):
        (JSC::Interpreter::privateExecute):
        (JSC::Interpreter::retrieveArguments):
        * jit/JITStubs.cpp:
        (JSC::DEFINE_STUB_FUNCTION):
        * runtime/Arguments.h:
        (JSC::Arguments::createAndTearOff):
        (JSC::Arguments::didTearOffActivation):
        (JSC::Arguments::finishCreationButDontTearOff):
        (JSC::Arguments::finishCreation):
        (JSC::Arguments::finishCreationAndTearOff):
        (JSC::Arguments::tearOff):

        * runtime/JSActivation.h:
        (JSC::JSActivation::tearOff): Moved Activation's code into its own header
        because that's where it belongs.

2011-11-14  Gavin Barraclough  <barraclough@apple.com>

        Should sign the jsc binary
        https://bugs.webkit.org/show_bug.cgi?id=72332

        Reviewed by David Kilzer.

        * Configurations/JSC.xcconfig:
        * entitlements.plist: Added.

2011-11-14  Filip Pizlo  <fpizlo@apple.com>

        DFG's inline references to objects should be tracked
        https://bugs.webkit.org/show_bug.cgi?id=72313

        Reviewed by Gavin Barraclough.
        